--- a/plantseg/models/models_zoo.yaml
+++ b/plantseg/models/models_zoo.yaml
@@ -1,3 +1,4 @@
 
+#Simple dictionary containing the models repository urls
 unet_ds2_bce: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_ds2x_bce&files=
 
