--- a/plantseg/config.yaml
+++ b/plantseg/config.yaml
@@ -1,18 +1,23 @@
-
-
+# Contains the path to the directory or file to process
 path: "/mnt/localdata0/lcerrone/FOR_paper/TUM_Ovules_Dataset/Ovules_test_final/ds3_predictions/"
 
 unet_prediction:
+  # Trained model name, more info on available models and custom models in the README
   model_name: "unet_ds3x"
-
+  # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
   device: "cuda"
   # patch size given to the network (adapt to fit in your GPU mem)
-  patch: [100, 224, 0]
+  patch: [100, 224, 224]
   # stride between patches (make sure the the patches overlap in order to get smoother prediction maps)
-  stride: [40, 100, 0]
-  version: best # alternative is last
+  stride: [40, 100, 100]
+  # "best" refers to best performing on the val set (recommended), alternatively "last" refers to the last version before interruption
+  version: best
+  # If "True" forces downloading networks for the online repos
+  model_update: False
 
 segmentation:
+  # Name of the algorithm to use for inferences
   name: "MultiCut"
+  # Optional parameters here (redefine standard parameters, check segmentation modules for more info)
   multicut_beta: 0.5
   save_directory: "MultiCut"
