--- a/plant_seg.yml
+++ b/plant_seg.yml
@@ -1,8 +1,8 @@
 name: plant_seg
 channels:
-  - anaconda
-  - cpape
   - pytorch
+  - cpape
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
@@ -12,85 +12,88 @@ dependencies:
   - blosc=1.17.0=he1b5a44_1
   - boost=1.68.0=py37h8619c78_1001
   - boost-cpp=1.68.0=h11c811c_1000
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2019.10.16=0
+  - bzip2=1.0.8=h516909a_1
+  - ca-certificates=2019.9.11=hecc5488_0
   - certifi=2019.9.11=py37_0
   - cffi=1.12.3=py37h2e261b9_0
-  - click=7.0=py37_0
+  - click=7.0=py_0
   - cloudpickle=1.2.2=py_0
-  - cpuonly=1.0=0
   - cudatoolkit=10.1.168=0
-  - cycler=0.10.0=py37_0
-  - cytoolz=0.10.0=py37h7b6447c_0
+  - cycler=0.10.0=py_1
+  - cytoolz=0.10.0=py37h516909a_0
   - dask-core=2.6.0=py_0
-  - dbus=1.13.6=h746ee38_0
-  - decorator=4.4.0=py37_1
+  - dbus=1.13.6=he372182_0
+  - decorator=4.4.0=py_0
   - elf=0.1.0=py_0_gbe6da0c
-  - et_xmlfile=1.0.1=py37_0
-  - expat=2.2.6=he6710b0_0
-  - fasteners=0.15=py_0
-  - fftw=3.3.8=h7b6447c_3
-  - fontconfig=2.13.0=h9420a91_0
-  - freetype=2.9.1=h8a8886c_1
-  - glib=2.56.2=hd408876_0
-  - gst-plugins-base=1.14.0=hbbd80ab_1
-  - gstreamer=1.14.0=hb453b48_1
+  - et_xmlfile=1.0.1=py_1001
+  - expat=2.2.5=he1b5a44_1004
+  - fasteners=0.14.1=py_3
+  - fftw=3.3.8=nompi_h7f3a6c3_1109
+  - fontconfig=2.13.1=he4413a7_1000
+  - freetype=2.10.0=he983fc9_1
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - glib=2.58.3=h6f030ca_1002
+  - gst-plugins-base=1.14.5=h0935bb2_0
+  - gstreamer=1.14.5=h36ae1b5_0
   - h5py=2.9.0=py37h7918eee_0
   - hdf5=1.10.4=hb1b8bf9_0
-  - icu=58.2=h9c2bf20_1
-  - imageio=2.6.0=py37_0
-  - intel-openmp=2019.4=243
+  - icu=58.2=hf484d3e_1000
+  - imageio=2.6.1=py37_0
+  - intel-openmp=2019.5=281
   - jdcal=1.4.1=py_0
   - joblib=0.13.2=py37_0
   - jpeg=9c=h14c3975_1001
-  - kiwisolver=1.1.0=py37he6710b0_0
+  - kiwisolver=1.1.0=py37hc9558a2_0
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
+  - libiconv=1.15=h516909a_1005
+  - libpng=1.6.37=hed695b0_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.0.10=h2733197_2
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.9=hea5a465_1
-  - llvmlite=0.29.0=py37hd408876_0
+  - libtiff=4.0.10=hfc65ed5_1004
+  - libuuid=2.32.1=h14c3975_1000
+  - libxcb=1.13=h14c3975_1002
+  - libxml2=2.9.9=h13577e0_2
+  - llvmlite=0.29.0=py37hfd453ef_1
+  - lz4-c=1.8.3=he1b5a44_1001
   - matplotlib=3.1.1=py37h5429711_0
-  - mkl=2019.4=243
+  - mkl=2019.5=281
   - mkl-service=2.3.0=py37he904b0f_0
   - mkl_fft=1.0.14=py37ha843d7b_0
   - mkl_random=1.1.0=py37hd6b4f25_0
   - monotonic=1.5=py_0
-  - msgpack-python=0.6.1=py37hfd86e86_1
+  - msgpack-python=0.6.2=py37hc9558a2_0
   - ncurses=6.1=he6710b0_1
-  - networkx=2.3=py_0
+  - networkx=2.4=py_0
   - nifty=v1.0.7=py37_2
   - ninja=1.9.0=py37hfd86e86_0
-  - nose=1.3.7=py37_2
-  - numba=0.45.1=py37h962f231_0
-  - numcodecs=0.6.3=py37he6710b0_0
+  - nose=1.3.7=py37_1002
+  - numba=0.45.1=py37hb3f55d8_0
+  - numcodecs=0.6.3=py37hf484d3e_0
   - numpy=1.17.2=py37haad9e8e_0
   - numpy-base=1.17.2=py37hde5b4d6_0
-  - olefile=0.46=py37_0
+  - olefile=0.46=py_0
   - openpyxl=3.0.0=py_0
-  - openssl=1.1.1d=h7b6447c_3
-  - pandas=0.25.2=py37he6710b0_0
-  - pcre=8.43=he6710b0_0
+  - openssl=1.1.1c=h516909a_0
+  - pandas=0.25.2=py37hb3f55d8_0
+  - pcre=8.43=he1b5a44_0
   - pillow=6.2.0=py37h34e0f95_0
   - pip=19.3.1=py37_0
+  - pthread-stubs=0.4=h14c3975_1001
   - pycparser=2.19=py37_0
   - pyparsing=2.4.2=py_0
-  - pyqt=5.9.2=py37h05f1152_2
+  - pyqt=5.9.2=py37hcca6a23_4
   - python=3.7.4=h265db76_1
-  - python-dateutil=2.8.0=py37_0
-  - pytorch=1.3.0=py3.7_cpu_0
+  - python-dateutil=2.8.0=py_0
+  - pytorch=1.3.0=py3.7_cuda10.1.243_cudnn7.6.3_0
   - pytz=2019.3=py_0
-  - pywavelets=1.0.3=py37hdd07704_1
+  - pywavelets=1.1.1=py37hc1659b7_0
   - pywget=3.2=py37_0
   - pyyaml=5.1.2=py37h7b6447c_0
-  - qt=5.9.7=h5867ecd_1
+  - qt=5.9.7=h52cfd70_2
   - readline=7.0=h7b6447c_5
-  - scikit-image=0.14.2=py37hf484d3e_0
+  - scikit-image=0.15.0=py37he6710b0_0
   - scikit-learn=0.21.3=py37hd81dba3_0
   - scipy=1.3.1=py37h7c811a0_0
   - setuptools=41.4.0=py37_0
@@ -101,18 +104,19 @@ dependencies:
   - tifffile=0.15.1=py37h3010b51_1001
   - tk=8.6.8=hbc83047_0
   - toolz=0.10.0=py_0
-  - torchvision=0.4.1=py37_cpu
-  - tornado=6.0.3=py37h7b6447c_0
+  - torchvision=0.4.1=py37_cu101
+  - tornado=6.0.3=py37h516909a_0
   - tqdm=4.36.1=py_0
   - vigra=1.11.1=py37h96eb51f_1009
-  - wget=1.20.1=h20c2e04_0
   - wheel=0.33.6=py37_0
-  - xlrd=1.2.0=py37_0
+  - xlrd=1.2.0=py_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
   - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
-  - zarr=2.3.2=py_0
+  - yaml=0.1.7=h96e3832_1
+  - zarr=2.3.2=py37_0
   - zlib=1.2.11=h7b6447c_3
-  - zstd=1.3.7=h0b5b093_0
+  - zstd=1.4.3=h3b9ef0a_0
   - pip:
     - absl-py==0.8.1
     - astor==0.8.0
@@ -131,6 +135,5 @@ dependencies:
     - termcolor==1.1.0
     - werkzeug==0.16.0
     - wrapt==1.11.2
-prefix: /home/lcerrone/anaconda3/envs/plant_seg
-
+prefix: /home/lcerrone_local/miniconda3/envs/plant_seg
 
