--- a/plantseg/models/models_zoo.yaml
+++ b/plantseg/models/models_zoo.yaml
@@ -1,4 +1,6 @@
 
 #Simple dictionary containing the models repository urls
 unet_ds2x_bce: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_ds2x_bce&files=
+unet_bce_with_aff_t0t3t9t25t35t40t49: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_with_aff_t0t3t9t25t35t40t49&files=
+
 
