fix gui relative import

--- a/plantseg/models/models_zoo.yaml
+++ b/plantseg/models/models_zoo.yaml
@@ -1,6 +1,12 @@
 
 #Simple dictionary containing the models repository urls
-unet_ds2x_bce: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_ds2x_bce&files=
-unet_bce_with_aff_t0t3t9t25t35t40t49: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_with_aff_t0t3t9t25t35t40t49&files=
+unet_ds2x_bce:
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_ds2x_bce&files=
+  resolution: [0.1, 0.3, 0.3]
+  description: Unet trained on Ovules.
+unet_bce_with_aff:
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_with_aff_t0t3t9t25t35t40t49&files=
+  resulution: [1, 1, 1]
+  description: Unet trained on root.
 
 
