--- a/plantseg/predictions/config_predict_template.yaml
+++ b/plantseg/predictions/config_predict_template.yaml
@@ -39,6 +39,6 @@ datasets:
   transformer:
     test:
       raw:
-        - name: Normalize
+        - name: Standardize
         - name: ToTensor
           expand_dims: true
