--- a/plantseg/predictions/config_predict_template.yaml
+++ b/plantseg/predictions/config_predict_template.yaml
@@ -24,21 +24,30 @@ predictor:
   name: 'StandardPredictor'
 
 # specify the test datasets
-datasets:
-  # patch size given to the network (adapt to fit in your GPU mem)
-  patch: [100, 224, 224]
-  # stride between patches (make sure the the patches overlap in order to get smoother prediction maps)
-  stride: [40, 100, 100]
-  # Define padding mode (Best to keep it True)
-  mirror_padding: true
-  # path to the raw data within the H5
-  raw_internal_path: raw
+loaders:
   # how many subprocesses to use for data loading
   num_workers: 8
+  # path to the raw data within the H5
+  raw_internal_path: raw
+  # Define padding mode (Best to keep it True)
+  mirror_padding: true
+  pad_width: 20
+  # Define test datasets
+  test:
+    # SliceBuilder configuration, i.e. how to iterate over the input volume patch-by-patch
+    slice_builder:
+      # SliceBuilder class
+      name: SliceBuilder
+      # train patch size given to the network (adapt to fit in your GPU mem, generally the bigger patch the better)
+      patch_shape: [100, 224, 224]
+      # train stride between patches
+      stride_shape: [40, 100, 100]
 
-  transformer:
-    test:
+    transformer:
       raw:
         - name: Standardize
         - name: ToTensor
           expand_dims: true
+
+
+
