add conda recipe

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -21,9 +21,11 @@ requirements:
     - scikit-learn
     - tifffile
     - vigra
-    - elf
     - torchvision
     - pytorch
+    - elf
+    - gasp
+    - pytorch-3dunet
 
 test:
   requires:
