--- a/plantseg/resources/models_zoo.yaml
+++ b/plantseg/resources/models_zoo.yaml
@@ -3,90 +3,38 @@
 
 ## Aliases for best performing networks for confocal and light-sheet
 generic_confocal_3d_unet:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_ds2x&files=
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds2x&files=
   resolution: [0.235, 0.150, 0.150]
-  description: Unet trained on confocal images on half-resolution in XY with BCE loss.
+  description: Unet trained on confocal images on 1/2-resolution in XY with BCEDiceLoss.
 generic_light_sheet_3d_unet:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_ds1x&files=
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds1x&files=
   resulution: [0.25, 0.1625, 0.1625]
-  description: Unet trained on light-sheet images on original resolution with BCE Loss.
+  description: Unet trained on light-sheet images on original resolution with BCEDiceLoss.
 
 ## Ovules
-confocal_unet_bce_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_ds1x&files=
+confocal_unet_bce_dice_ds1x:
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds1x&files=
   resolution: [0.235, 0.075, 0.075]
-  description: Unet trained on confocal images on original resolution with BCE loss.
-confocal_unet_bce_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_ds2x&files=
+  description: Unet trained on confocal images on original resolution with BCEDiceLoss.
+confocal_unet_bce_dice_ds2x:
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds2x&files=
   resolution: [0.235, 0.150, 0.150]
-  description: Unet trained on confocal images on half-resolution in XY with BCE loss.
-confocal_unet_dice_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_dice_ds1x&files=
-  resolution: [0.235, 0.075, 0.075]
-  description: Unet trained on confocal images on original resolution with Dice Loss.
-confocal_unet_dice_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_dice_ds2x&files=
-  resolution: [0.235, 0.150, 0.150]
-  description: Unet trained on confocal images on half-resolution in XY with Dice Loss.
-confocal_resunet_bce_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Fresunet_bce_ds1x&files=
-  resolution: [0.235, 0.075, 0.075]
-  description: Residual Unet trained on confocal images on original resolution with BCE loss.
-confocal_resunet_bce_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Fresunet_bce_ds2x&files=
-  resolution: [0.235, 0.150, 0.150]
-  description: Residual Unet trained on confocal images on half-resolution in XY with BCE loss.
-confocal_resunet_dice_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Fresunet_dice_ds1x&files=
-  resolution: [0.235, 0.075, 0.075]
-  description: Residual Unet trained on confocal images on original resolution with Dice loss.
-confocal_resunet_dice_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Fresunet_dice_ds2x&files=
-  resolution: [0.235, 0.150, 0.150]
-  description: Residual Unet trained on confocal images on half-resolution in XY with Dice loss.
-
+  description: Unet trained on confocal images on 1/2-resolution in XY with BCEDiceLoss.
+confocal_unet_bce_dice_ds3x:
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_bce_dice_ds3x&files=
+  resolution: [0.235, 0.225, 0.225]
+  description: Unet trained on confocal images on 1/3-resolution in XY with BCEDiceLoss.
 
 ## Root
-lightsheet_unet_bce_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_ds1x&files=
+lightsheet_unet_bce_dice_ds1x:
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds1x&files=
   resulution: [0.25, 0.1625, 0.1625]
-  description: Unet trained on light-sheet images on original resolution with BCE Loss.
-lightsheet_unet_bce_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_ds2x&files=
+  description: Unet trained on light-sheet images on original resolution with BCEDiceLoss.
+lightsheet_unet_bce_dice_ds2x:
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds2x&files=
   resulution: [0.25, 0.325, 0.325]
-  description: Unet trained on light-sheet images on half-resolution in XY with BCE Loss.
-lightsheet_unet_dice_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_dice_ds1x&files=
-  resulution: [0.25, 0.1625, 0.1625]
-  description: Unet trained on light-sheet images on original resolution with Dice Loss.
-lightsheet_unet_dice_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_dice_ds2x&files=
-  resulution: [0.25, 0.325, 0.325]
-  description: Unet trained on light-sheet images on half-resolution in XY with Dice Loss.
-lightsheet_resunet_bce_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Fresunet_bce_ds1x&files=
-  resulution: [0.25, 0.1625, 0.1625]
-  description: Residual Unet trained on light-sheet images on original resolution with BCE Loss.
-lightsheet_resunet_bce_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Fresunet_bce_ds2x&files=
-  resulution: [0.25, 0.325, 0.325]
-  description: Residual Unet trained on light-sheet images on half-resolution in XY with BCE Loss.
-lightsheet_resunet_dice_ds1x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Fresunet_dice_ds1x&files=
-  resulution: [0.25, 0.1625, 0.1625]
-  description: Residual Unet trained on light-sheet images on original resolution with Dice Loss.
-lightsheet_resunet_dice_ds2x:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Fresunet_dice_ds2x&files=
-  resulution: [0.25, 0.325, 0.325]
-  description: Residual Unet trained on light-sheet images on half-resolution in XY with Dice Loss.
-
-
-# Old networks
-ovules+unet_ds2x_bce:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FArabidopsis-Ovules%2Funet_ds2x_bce&files=
-  resolution: [0.235, 0.150, 0.150]
-  description: Unet trained on ovules.
-root_unet_bce_with_aff:
-  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_with_aff_t0t3t9t25t35t40t49&files=
-  resulution: [0.25, 0.1625, 0.1625]
-  description: Unet trained on root.
+  description: Unet trained on light-sheet images on 1/2-resolution in XY with BCEDiceLoss.
+lightsheet_unet_bce_dice_ds3x:
+  path: https://oc.embl.de/index.php/s/61s67Mg5VQy7dh9/download?path=%2FLateral-Root-Primordia%2Funet_bce_dice_ds3x&files=
+  resulution: [0.25, 0.4875, 0.4875]
+  description: Unet trained on light-sheet images on 1/3-resolution in XY with BCEDiceLoss.
