--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -27,8 +27,8 @@ cnn_prediction:
   model_name: "generic_confocal_3d_unet"
   # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
   device: "cpu"
-  # If True raw data will be mirror padded with 20 voxels in each axis
-  mirror_padding: True
+  # (int or tuple) mirror pad the input stack in each axis for best prediction performance
+  mirror_padding: [16, 32, 32]
   # how many subprocesses to use for data loading
   num_workers: 8
   # patch size given to the network (adapt to fit in your GPU mem)
